// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArrowUp component match snapshot correctly 1`] = `
<svg
  fill=""
  height={24}
  stroke=""
  strokeLinecap="round"
  strokeLinejoin="round"
  strokeWidth="2"
  viewBox="0 0 24 24"
  width={24}
  xmlns="http://www.w3.org/2000/svg"
>
  <line
    x1="12"
    x2="12"
    y1="19"
    y2="5"
  />
  <polyline
    points="5 12 12 5 19 12"
  />
</svg>
`;

exports[`ArrowUp component match snapshot correctly 2`] = `
<ArrowUp
  color=""
  size={24}
>
  <svg
    fill=""
    height={24}
    stroke=""
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth="2"
    viewBox="0 0 24 24"
    width={24}
    xmlns="http://www.w3.org/2000/svg"
  >
    <line
      x1="12"
      x2="12"
      y1="19"
      y2="5"
    />
    <polyline
      points="5 12 12 5 19 12"
    />
  </svg>
</ArrowUp>
`;
